2005-06-14 Andrew Ruder <aeruder@ksu.edu>
 * All: Filled in lots of headers that will be needed for
 OS X compilation.  Fixed relative paths in GNUmakefile.preambles
 in Output/GNUstepOutput and Input/NetclassesInput.

2005-06-12 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: dns_helper returns the reverse lookup of the hostname
 as well.

2005-06-09 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Added a helper tool class to ease use of external
 tools + distributed objects.

 Moved /server dns look ups to a helper tool

 Added /alias,/unalias and a default set of aliases

 * NetclassesInput: Added a warning when using a package version < 1.04

 * Highlighting: Added back in the preferences to new preferences system.

 * DCCSupport: Added back in the preferences to new preferences system

2005-06-08 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Changed /scrollback lines to work with new scrollback
 history mechanism.  Obsoleted several unused preferences. ;)

 * GNUstepOutput: Added Tools/ directory for various helper tools.
 Began exec_helper (A tool to help with /exec)

 * GNUstepOutput: Added /exec and /exec -o commands

2005-06-05 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Fixed history corruption when closing tab with /close.
 Fixed notifications when removing tabs so that new selection is sent out
 as well.

2005-06-02 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Added a method to InputController to allow a command to
 be executed (programmatically) without making it into the history or messing
 up what the person is currently typing.

 Added support for // to escape normal command handling:
 //dev/hda is cool
 would send
 /dev/hda is cool
 to the channel.

 Fixed autoconnect commands for autoconnected servers.

 Fixed InputController's hold on ConnectionController when
 a ContentController is given a new ConnectionController

 Got rid of some used methods in ConnectionController pertaining to
 InputController
