@@ -1,7 +1,10 @@
-2005-06-14 Andrew Ruder <aeruder@ksu.edu>
+2005-06-13 Andrew Ruder <aeruder@ksu.edu>
  * All: Filled in lots of headers that will be needed for
  OS X compilation.  Fixed relative paths in GNUmakefile.preambles
  in Output/GNUstepOutput and Input/NetclassesInput.
+
+ * GNUstepOutput: /topic command works again, fixed topic inspector to
+ stop double querying the topic.
 
 2005-06-12 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: dns_helper returns the reverse lookup of the hostname
